--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-multi-carousel": "^2.8.6",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
